Timeseries reference payload aggregate